--- a/demoblaze/test-output/old/Default suite/methods.html
+++ b/demoblaze/test-output/old/Default suite/methods.html
@@ -1,28 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ca907e">  <td>20/10/07 10:18:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Login@7f13d6e]">&gt;&gt;lunchBrowser</td> 
-<td>&nbsp;</td>  <td>main@84739718</td>   <td></td> </tr>
-<tr bgcolor="a9dace">  <td>20/10/07 10:19:13</td>   <td>17535</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.login()[pri:2, instance:com.atmecs.demoblaze.testscripts.Login@7f13d6e]">login</td> 
-  <td>main@84739718</td>   <td></td> </tr>
-<tr bgcolor="ca907e">  <td>20/10/07 10:19:14</td>   <td>18934</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Login@7f13d6e]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@84739718</td>   <td></td> </tr>
-<tr bgcolor="ca907e">  <td>20/10/07 10:19:16</td>   <td>21122</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Registration@51cdd8a]">&gt;&gt;lunchBrowser</td> 
-<td>&nbsp;</td>  <td>main@84739718</td>   <td></td> </tr>
-<tr bgcolor="997ed7">  <td>20/10/07 10:19:28</td>   <td>33132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Registration.register()[pri:1, instance:com.atmecs.demoblaze.testscripts.Registration@51cdd8a]">register</td> 
-  <td>main@84739718</td>   <td></td> </tr>
-<tr bgcolor="ca907e">  <td>20/10/07 10:19:29</td>   <td>34146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Registration@51cdd8a]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@84739718</td>   <td></td> </tr>
-<tr bgcolor="ca907e">  <td>20/10/07 10:19:32</td>   <td>37001</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.ContactUs@d44fc21]">&gt;&gt;lunchBrowser</td> 
-<td>&nbsp;</td>  <td>main@84739718</td>   <td></td> </tr>
-<tr bgcolor="6ab965">  <td>20/10/07 10:19:43</td>   <td>48179</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUs.contactus()[pri:3, instance:com.atmecs.demoblaze.testscripts.ContactUs@d44fc21]">contactus</td> 
-  <td>main@84739718</td>   <td></td> </tr>
-<tr bgcolor="ca907e">  <td>20/10/07 10:19:45</td>   <td>49762</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.ContactUs@d44fc21]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@84739718</td>   <td></td> </tr>
-<tr bgcolor="ca907e">  <td>20/10/07 10:19:47</td>   <td>52284</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.AddToCart@23faf8f2]">&gt;&gt;lunchBrowser</td> 
-<td>&nbsp;</td>  <td>main@84739718</td>   <td></td> </tr>
-<tr bgcolor="ac9a89">  <td>20/10/07 10:20:00</td>   <td>64781</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddToCart.addtoCart()[pri:4, instance:com.atmecs.demoblaze.testscripts.AddToCart@23faf8f2]">addtoCart</td> 
-  <td>main@84739718</td>   <td></td> </tr>
-<tr bgcolor="ca907e">  <td>20/10/07 10:20:22</td>   <td>86527</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.AddToCart@23faf8f2]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@84739718</td>   <td></td> </tr>
+<tr bgcolor="adede5">  <td>20/10/09 18:20:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Login@d44fc21]">&gt;&gt;lunchBrowser</td> 
+<td>&nbsp;</td>  <td>main@511473681</td>   <td></td> </tr>
+<tr bgcolor="6ab965">  <td>20/10/09 18:20:38</td>   <td>11518</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.login()[pri:2, instance:com.atmecs.demoblaze.testscripts.Login@d44fc21]">login</td> 
+  <td>main@511473681</td>   <td></td> </tr>
+<tr bgcolor="adede5">  <td>20/10/09 18:20:38</td>   <td>12366</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Login@d44fc21]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@511473681</td>   <td></td> </tr>
+<tr bgcolor="adede5">  <td>20/10/09 18:20:39</td>   <td>13303</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Registration@23faf8f2]">&gt;&gt;lunchBrowser</td> 
+<td>&nbsp;</td>  <td>main@511473681</td>   <td></td> </tr>
+<tr bgcolor="ac9a89">  <td>20/10/09 18:20:51</td>   <td>24463</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Registration.register()[pri:1, instance:com.atmecs.demoblaze.testscripts.Registration@23faf8f2]">register</td> 
+  <td>main@511473681</td>   <td></td> </tr>
+<tr bgcolor="adede5">  <td>20/10/09 18:20:51</td>   <td>25366</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Registration@23faf8f2]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@511473681</td>   <td></td> </tr>
+<tr bgcolor="adede5">  <td>20/10/09 18:20:52</td>   <td>26354</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.ContactUs@2d6eabae]">&gt;&gt;lunchBrowser</td> 
+<td>&nbsp;</td>  <td>main@511473681</td>   <td></td> </tr>
+<tr bgcolor="c26598">  <td>20/10/09 18:21:11</td>   <td>45083</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUs.contactus()[pri:3, instance:com.atmecs.demoblaze.testscripts.ContactUs@2d6eabae]">contactus</td> 
+  <td>main@511473681</td>   <td></td> </tr>
+<tr bgcolor="adede5">  <td>20/10/09 18:21:13</td>   <td>46526</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.ContactUs@2d6eabae]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@511473681</td>   <td></td> </tr>
+<tr bgcolor="adede5">  <td>20/10/09 18:21:14</td>   <td>47894</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.AddToCart@4e7dc304]">&gt;&gt;lunchBrowser</td> 
+<td>&nbsp;</td>  <td>main@511473681</td>   <td></td> </tr>
+<tr bgcolor="d878d1">  <td>20/10/09 18:21:25</td>   <td>58477</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddToCart.addtoCart()[pri:4, instance:com.atmecs.demoblaze.testscripts.AddToCart@4e7dc304]">addtoCart</td> 
+  <td>main@511473681</td>   <td></td> </tr>
+<tr bgcolor="adede5">  <td>20/10/09 18:21:45</td>   <td>78795</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.AddToCart@4e7dc304]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@511473681</td>   <td></td> </tr>
 </table>
