--- a/demoblaze/test-output/old/Suite/methods-alphabetical.html
+++ b/demoblaze/test-output/old/Suite/methods-alphabetical.html
@@ -1,52 +1,52 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6ab965">  <td>20/10/08 17:32:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddToCart.addtoCart()[pri:4, instance:com.atmecs.demoblaze.testscripts.AddToCart@4e7dc304]">addtoCart</td> 
-  <td>TestNG-tests-1@898528855</td>   <td></td> </tr>
-<tr bgcolor="6ab965">  <td>20/10/08 17:32:52</td>   <td>23202</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddToCart.addtoCart()[pri:4, instance:com.atmecs.demoblaze.testscripts.AddToCart@5faeada1]">addtoCart</td> 
-  <td>TestNG-tests-2@618424363</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:31:39</td>   <td>-49844</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Registration@1563da5]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@618424363</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:31:50</td>   <td>-39164</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Registration@48503868]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@898528855</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:32:00</td>   <td>-29563</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Login@64729b1e]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@898528855</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:32:08</td>   <td>-21249</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Login@528931cf]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@618424363</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:32:15</td>   <td>-14590</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.ContactUs@10bbd20a]">&lt;&lt;closeBrowser</td> 
+<tr bgcolor="c26598">  <td>20/10/09 18:16:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddToCart.addtoCart()[pri:4, instance:com.atmecs.demoblaze.testscripts.AddToCart@10bbd20a]">addtoCart</td> 
+  <td>TestNG-tests-1@248317951</td>   <td></td> </tr>
+<tr bgcolor="c26598">  <td>20/10/09 18:16:47</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddToCart.addtoCart()[pri:4, instance:com.atmecs.demoblaze.testscripts.AddToCart@30a3107a]">addtoCart</td> 
+  <td>TestNG-tests-2@757147550</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:15:10</td>   <td>-97056</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Registration@2bbf4b8b]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@757147550</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:15:21</td>   <td>-85628</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Registration@184f6be2]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@248317951</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:15:37</td>   <td>-70242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Login@48503868]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@248317951</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:15:40</td>   <td>-66649</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Login@ea1a8d5]">&lt;&lt;closeBrowser</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:32:32</td>   <td>2579</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.ContactUs@ea1a8d5]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@618424363</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:32:45</td>   <td>15223</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.AddToCart@4e7dc304]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@898528855</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:32:54</td>   <td>25003</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.AddToCart@5faeada1]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@618424363</td>   <td></td> </tr>
-<tr bgcolor="c26598">  <td>20/10/08 17:32:15</td>   <td>-14594</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUs.contactus()[pri:3, instance:com.atmecs.demoblaze.testscripts.ContactUs@10bbd20a]">contactus</td> 
-  <td>TestNG-tests-1@898528855</td>   <td></td> </tr>
-<tr bgcolor="c26598">  <td>20/10/08 17:32:29</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUs.contactus()[pri:3, instance:com.atmecs.demoblaze.testscripts.ContactUs@ea1a8d5]">contactus</td> 
-  <td>TestNG-tests-2@618424363</td>   <td></td> </tr>
-<tr bgcolor="ac9a89">  <td>20/10/08 17:31:59</td>   <td>-30265</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.login()[pri:2, instance:com.atmecs.demoblaze.testscripts.Login@528931cf]">login</td> 
-  <td>TestNG-tests-2@618424363</td>   <td></td> </tr>
-<tr bgcolor="ac9a89">  <td>20/10/08 17:32:00</td>   <td>-29630</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.login()[pri:2, instance:com.atmecs.demoblaze.testscripts.Login@64729b1e]">login</td> 
-  <td>TestNG-tests-1@898528855</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:31:24</td>   <td>-65123</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.Registration@48503868]">&gt;&gt;lunchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@898528855</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:31:24</td>   <td>-65123</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.Registration@1563da5]">&gt;&gt;lunchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@618424363</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:31:45</td>   <td>-43804</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.Login@528931cf]">&gt;&gt;lunchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@618424363</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:31:50</td>   <td>-39162</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.Login@64729b1e]">&gt;&gt;lunchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@898528855</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:32:04</td>   <td>-25648</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.ContactUs@10bbd20a]">&gt;&gt;lunchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@898528855</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:32:15</td>   <td>-14588</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.AddToCart@4e7dc304]">&gt;&gt;lunchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@898528855</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:32:15</td>   <td>-14096</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.ContactUs@ea1a8d5]">&gt;&gt;lunchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@618424363</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:32:40</td>   <td>10731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.AddToCart@5faeada1]">&gt;&gt;lunchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@618424363</td>   <td></td> </tr>
-<tr bgcolor="d878d1">  <td>20/10/08 17:31:39</td>   <td>-50332</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Registration.register()[pri:1, instance:com.atmecs.demoblaze.testscripts.Registration@1563da5]">register</td> 
-  <td>TestNG-tests-2@618424363</td>   <td></td> </tr>
-<tr bgcolor="d878d1">  <td>20/10/08 17:31:39</td>   <td>-50324</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Registration.register()[pri:1, instance:com.atmecs.demoblaze.testscripts.Registration@48503868]">register</td> 
-  <td>TestNG-tests-1@898528855</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:16:13</td>   <td>-33431</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.ContactUs@1563da5]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@757147550</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:16:26</td>   <td>-21052</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.ContactUs@6895a785]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@248317951</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:16:47</td>   <td>56</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.AddToCart@10bbd20a]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@248317951</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:16:56</td>   <td>9465</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.AddToCart@30a3107a]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@757147550</td>   <td></td> </tr>
+<tr bgcolor="66a57e">  <td>20/10/09 18:16:13</td>   <td>-33801</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUs.contactus()[pri:3, instance:com.atmecs.demoblaze.testscripts.ContactUs@6895a785]">contactus</td> 
+  <td>TestNG-tests-1@248317951</td>   <td></td> </tr>
+<tr bgcolor="66a57e">  <td>20/10/09 18:16:13</td>   <td>-33791</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUs.contactus()[pri:3, instance:com.atmecs.demoblaze.testscripts.ContactUs@1563da5]">contactus</td> 
+  <td>TestNG-tests-2@757147550</td>   <td></td> </tr>
+<tr bgcolor="d878d1">  <td>20/10/09 18:15:35</td>   <td>-71814</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.login()[pri:2, instance:com.atmecs.demoblaze.testscripts.Login@48503868]">login</td> 
+  <td>TestNG-tests-1@248317951</td>   <td></td> </tr>
+<tr bgcolor="d878d1">  <td>20/10/09 18:15:40</td>   <td>-66663</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.login()[pri:2, instance:com.atmecs.demoblaze.testscripts.Login@ea1a8d5]">login</td> 
+  <td>TestNG-tests-2@757147550</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:14:41</td>   <td>-125967</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.Registration@184f6be2]">&gt;&gt;lunchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@248317951</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:14:41</td>   <td>-125967</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.Registration@2bbf4b8b]">&gt;&gt;lunchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@757147550</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:15:17</td>   <td>-89694</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.Login@ea1a8d5]">&gt;&gt;lunchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@757147550</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:15:21</td>   <td>-85627</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.Login@48503868]">&gt;&gt;lunchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@248317951</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:15:38</td>   <td>-68383</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.ContactUs@6895a785]">&gt;&gt;lunchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@248317951</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:15:40</td>   <td>-66644</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.ContactUs@1563da5]">&gt;&gt;lunchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@757147550</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:16:22</td>   <td>-25027</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.AddToCart@30a3107a]">&gt;&gt;lunchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@757147550</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:16:26</td>   <td>-21051</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.AddToCart@10bbd20a]">&gt;&gt;lunchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@248317951</td>   <td></td> </tr>
+<tr bgcolor="a9a285">  <td>20/10/09 18:15:09</td>   <td>-97573</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Registration.register()[pri:1, instance:com.atmecs.demoblaze.testscripts.Registration@184f6be2]">register</td> 
+  <td>TestNG-tests-1@248317951</td>   <td></td> </tr>
+<tr bgcolor="a9a285">  <td>20/10/09 18:15:09</td>   <td>-97533</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Registration.register()[pri:1, instance:com.atmecs.demoblaze.testscripts.Registration@2bbf4b8b]">register</td> 
+  <td>TestNG-tests-2@757147550</td>   <td></td> </tr>
 </table>
