--- a/demoblaze/test-output/old/Suite/methods.html
+++ b/demoblaze/test-output/old/Suite/methods.html
@@ -1,52 +1,52 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:31:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.Registration@48503868]">&gt;&gt;lunchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@898528855</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:31:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.Registration@1563da5]">&gt;&gt;lunchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@618424363</td>   <td></td> </tr>
-<tr bgcolor="d878d1">  <td>20/10/08 17:31:39</td>   <td>14791</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Registration.register()[pri:1, instance:com.atmecs.demoblaze.testscripts.Registration@1563da5]">register</td> 
-  <td>TestNG-tests-2@618424363</td>   <td></td> </tr>
-<tr bgcolor="d878d1">  <td>20/10/08 17:31:39</td>   <td>14799</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Registration.register()[pri:1, instance:com.atmecs.demoblaze.testscripts.Registration@48503868]">register</td> 
-  <td>TestNG-tests-1@898528855</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:31:39</td>   <td>15279</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Registration@1563da5]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@618424363</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:31:45</td>   <td>21319</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.Login@528931cf]">&gt;&gt;lunchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@618424363</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:31:50</td>   <td>25959</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Registration@48503868]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@898528855</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:31:50</td>   <td>25961</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.Login@64729b1e]">&gt;&gt;lunchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@898528855</td>   <td></td> </tr>
-<tr bgcolor="ac9a89">  <td>20/10/08 17:31:59</td>   <td>34858</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.login()[pri:2, instance:com.atmecs.demoblaze.testscripts.Login@528931cf]">login</td> 
-  <td>TestNG-tests-2@618424363</td>   <td></td> </tr>
-<tr bgcolor="ac9a89">  <td>20/10/08 17:32:00</td>   <td>35493</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.login()[pri:2, instance:com.atmecs.demoblaze.testscripts.Login@64729b1e]">login</td> 
-  <td>TestNG-tests-1@898528855</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:32:00</td>   <td>35560</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Login@64729b1e]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@898528855</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:32:04</td>   <td>39475</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.ContactUs@10bbd20a]">&gt;&gt;lunchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@898528855</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:32:08</td>   <td>43874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Login@528931cf]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@618424363</td>   <td></td> </tr>
-<tr bgcolor="c26598">  <td>20/10/08 17:32:15</td>   <td>50529</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUs.contactus()[pri:3, instance:com.atmecs.demoblaze.testscripts.ContactUs@10bbd20a]">contactus</td> 
-  <td>TestNG-tests-1@898528855</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:32:15</td>   <td>50533</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.ContactUs@10bbd20a]">&lt;&lt;closeBrowser</td> 
+<tr bgcolor="85a98f">  <td>20/10/09 18:14:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.Registration@184f6be2]">&gt;&gt;lunchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@248317951</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:14:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.Registration@2bbf4b8b]">&gt;&gt;lunchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@757147550</td>   <td></td> </tr>
+<tr bgcolor="a9a285">  <td>20/10/09 18:15:09</td>   <td>28394</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Registration.register()[pri:1, instance:com.atmecs.demoblaze.testscripts.Registration@184f6be2]">register</td> 
+  <td>TestNG-tests-1@248317951</td>   <td></td> </tr>
+<tr bgcolor="a9a285">  <td>20/10/09 18:15:09</td>   <td>28434</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Registration.register()[pri:1, instance:com.atmecs.demoblaze.testscripts.Registration@2bbf4b8b]">register</td> 
+  <td>TestNG-tests-2@757147550</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:15:10</td>   <td>28911</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Registration@2bbf4b8b]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@757147550</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:15:17</td>   <td>36273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.Login@ea1a8d5]">&gt;&gt;lunchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@757147550</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:15:21</td>   <td>40339</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Registration@184f6be2]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@248317951</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:15:21</td>   <td>40340</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.Login@48503868]">&gt;&gt;lunchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@248317951</td>   <td></td> </tr>
+<tr bgcolor="d878d1">  <td>20/10/09 18:15:35</td>   <td>54153</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.login()[pri:2, instance:com.atmecs.demoblaze.testscripts.Login@48503868]">login</td> 
+  <td>TestNG-tests-1@248317951</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:15:37</td>   <td>55725</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Login@48503868]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@248317951</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:15:38</td>   <td>57584</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.ContactUs@6895a785]">&gt;&gt;lunchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@248317951</td>   <td></td> </tr>
+<tr bgcolor="d878d1">  <td>20/10/09 18:15:40</td>   <td>59304</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.login()[pri:2, instance:com.atmecs.demoblaze.testscripts.Login@ea1a8d5]">login</td> 
+  <td>TestNG-tests-2@757147550</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:15:40</td>   <td>59318</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.Login@ea1a8d5]">&lt;&lt;closeBrowser</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:32:15</td>   <td>50535</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.AddToCart@4e7dc304]">&gt;&gt;lunchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@898528855</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:32:15</td>   <td>51027</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.ContactUs@ea1a8d5]">&gt;&gt;lunchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@618424363</td>   <td></td> </tr>
-<tr bgcolor="6ab965">  <td>20/10/08 17:32:29</td>   <td>65123</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddToCart.addtoCart()[pri:4, instance:com.atmecs.demoblaze.testscripts.AddToCart@4e7dc304]">addtoCart</td> 
-  <td>TestNG-tests-1@898528855</td>   <td></td> </tr>
-<tr bgcolor="c26598">  <td>20/10/08 17:32:29</td>   <td>65131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUs.contactus()[pri:3, instance:com.atmecs.demoblaze.testscripts.ContactUs@ea1a8d5]">contactus</td> 
-  <td>TestNG-tests-2@618424363</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:32:32</td>   <td>67702</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.ContactUs@ea1a8d5]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@618424363</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:32:40</td>   <td>75854</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.AddToCart@5faeada1]">&gt;&gt;lunchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@618424363</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:32:45</td>   <td>80346</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.AddToCart@4e7dc304]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@898528855</td>   <td></td> </tr>
-<tr bgcolor="6ab965">  <td>20/10/08 17:32:52</td>   <td>88325</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddToCart.addtoCart()[pri:4, instance:com.atmecs.demoblaze.testscripts.AddToCart@5faeada1]">addtoCart</td> 
-  <td>TestNG-tests-2@618424363</td>   <td></td> </tr>
-<tr bgcolor="adede5">  <td>20/10/08 17:32:54</td>   <td>90126</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.AddToCart@5faeada1]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@618424363</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:15:40</td>   <td>59323</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.ContactUs@1563da5]">&gt;&gt;lunchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@757147550</td>   <td></td> </tr>
+<tr bgcolor="66a57e">  <td>20/10/09 18:16:13</td>   <td>92166</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUs.contactus()[pri:3, instance:com.atmecs.demoblaze.testscripts.ContactUs@6895a785]">contactus</td> 
+  <td>TestNG-tests-1@248317951</td>   <td></td> </tr>
+<tr bgcolor="66a57e">  <td>20/10/09 18:16:13</td>   <td>92176</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUs.contactus()[pri:3, instance:com.atmecs.demoblaze.testscripts.ContactUs@1563da5]">contactus</td> 
+  <td>TestNG-tests-2@757147550</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:16:13</td>   <td>92536</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.ContactUs@1563da5]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@757147550</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:16:22</td>   <td>100940</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.AddToCart@30a3107a]">&gt;&gt;lunchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@757147550</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:16:26</td>   <td>104915</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.ContactUs@6895a785]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@248317951</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:16:26</td>   <td>104916</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.lunchBrowser(java.lang.String)[pri:0, instance:com.atmecs.demoblaze.testscripts.AddToCart@10bbd20a]">&gt;&gt;lunchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@248317951</td>   <td></td> </tr>
+<tr bgcolor="c26598">  <td>20/10/09 18:16:47</td>   <td>125967</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddToCart.addtoCart()[pri:4, instance:com.atmecs.demoblaze.testscripts.AddToCart@10bbd20a]">addtoCart</td> 
+  <td>TestNG-tests-1@248317951</td>   <td></td> </tr>
+<tr bgcolor="c26598">  <td>20/10/09 18:16:47</td>   <td>125980</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddToCart.addtoCart()[pri:4, instance:com.atmecs.demoblaze.testscripts.AddToCart@30a3107a]">addtoCart</td> 
+  <td>TestNG-tests-2@757147550</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:16:47</td>   <td>126023</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.AddToCart@10bbd20a]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@248317951</td>   <td></td> </tr>
+<tr bgcolor="85a98f">  <td>20/10/09 18:16:56</td>   <td>135432</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeBrowser()[pri:0, instance:com.atmecs.demoblaze.testscripts.AddToCart@30a3107a]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@757147550</td>   <td></td> </tr>
 </table>
